# wqpy-clone

./: .gitignore  README.md  main.py  pyproject.toml
docs/: quickstart.rst
tests/: test_wqpy.py
wqpy/: __init__.py  aquery.py  conn.py  query.py  read.py
